--- a/proyecto_front/src/components/empleados/empleados.css
+++ b/proyecto_front/src/components/empleados/empleados.css
@@ -1,3 +1,26 @@
-#empleados-buscar-container {
-  margin-top: 200px;
+#empleados-container {
+  margin-top: 150px;
+}
+
+#empleados-buscar-container,
+#empleados-crear-container {
+  margin-top: 50px;
+}
+
+.react-bs-table-sizePerPage-dropdown .dropdown-toggle {
+  float: left;
+  margin-bottom: 20px;
+}
+
+.search-label {
+  float: right;
+  padding-bottom: 10px;
+}
+.sr-only {
+  font-size: 0px;
+}
+
+#empleados-crear-container .form-label {
+  float: left;
+  margin-bottom: 10px;
 }
